MillBuild/Testing/src/generated/expr/Expression.output
Terminals unused in grammar

    ERROR


Rules useless in parser due to conflicts

   15 prim: ID


State 9 conflicts: 7 reduce/reduce


Grammar

    0 $accept: loop $end

    1 loop: S_1 S_2

    2 oneLine: expr

    3 expr: atom
    4      | expr `+` expr
    5      | expr `*` expr
    6      | expr `-` expr
    7      | expr `/` expr
    8      | `(` expr `)`

    9 atom: prim
   10      | STRING

   11 prim: HEX
   12      | DEC
   13      | ID
   14      | REAL
   15      | ID

   16 S_1: ε
   17      | NL

   18 S_2_L: oneLine
   19      | S_2_L NL oneLine

   20 S_2: ε
   21      | S_2_L


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    `(` (258) 8
    `)` (259) 8
    HEX (260) 11
    DEC (261) 12
    REAL (262) 14
    ID (263) 13 15
    STRING (264) 10
    ERROR (265)
    NL (266) 17 19
    `+` (267) 4
    `-` (268) 6
    `*` (269) 5
    `/` (270) 7


Nonterminals, with rules where they appear

    $accept (16)
        on left: 0
    loop (17)
        on left: 1
        on right: 0
    oneLine (18)
        on left: 2
        on right: 18 19
    expr (19)
        on left: 3 4 5 6 7 8
        on right: 2 4 5 6 7 8
    atom (20)
        on left: 9 10
        on right: 3
    prim (21)
        on left: 11 12 13 14 15
        on right: 9
    S_1 (22)
        on left: 16 17
        on right: 1
    S_2_L (23)
        on left: 18 19
        on right: 19 21
    S_2 (24)
        on left: 20 21
        on right: 1


State 0

    0 $accept: • loop $end

    NL  shift, and go to state 1

    $default  reduce using rule 16 (S_1)

    loop  go to state 2
    S_1  go to state 3


State 1

   17 S_1: NL •

    $default  reduce using rule 17 (S_1)


State 2

    0 $accept: loop • $end

    $end  shift, and go to state 4


State 3

    1 loop: S_1 • S_2

    `(`  shift, and go to state 5
    HEX  shift, and go to state 6
    DEC  shift, and go to state 7
    REAL  shift, and go to state 8
    ID  shift, and go to state 9
    STRING  shift, and go to state 10

    $default  reduce using rule 20 (S_2)

    oneLine  go to state 11
    expr  go to state 12
    atom  go to state 13
    prim  go to state 14
    S_2_L  go to state 15
    S_2  go to state 16


State 4

    0 $accept: loop $end •

    $default  accept


State 5

    8 expr: `(` • expr `)`

    `(`  shift, and go to state 5
    HEX  shift, and go to state 6
    DEC  shift, and go to state 7
    REAL  shift, and go to state 8
    ID  shift, and go to state 9
    STRING  shift, and go to state 10

    expr  go to state 17
    atom  go to state 13
    prim  go to state 14


State 6

   11 prim: HEX •

    $default  reduce using rule 11 (prim)


State 7

   12 prim: DEC •

    $default  reduce using rule 12 (prim)


State 8

   14 prim: REAL •

    $default  reduce using rule 14 (prim)


State 9

   13 prim: ID •
   15      | ID •

    $end      reduce using rule 13 (prim)
    $end      [reduce using rule 15 (prim)]
    `)`     reduce using rule 13 (prim)
    `)`     [reduce using rule 15 (prim)]
    NL     reduce using rule 13 (prim)
    NL     [reduce using rule 15 (prim)]
    `+`     reduce using rule 13 (prim)
    `+`     [reduce using rule 15 (prim)]
    `-`     reduce using rule 13 (prim)
    `-`     [reduce using rule 15 (prim)]
    `*`     reduce using rule 13 (prim)
    `*`     [reduce using rule 15 (prim)]
    `/`     reduce using rule 13 (prim)
    `/`     [reduce using rule 15 (prim)]
    $default  reduce using rule 13 (prim)


State 10

   10 atom: STRING •

    $default  reduce using rule 10 (atom)


State 11

   18 S_2_L: oneLine •

    $default  reduce using rule 18 (S_2_L)


State 12

    2 oneLine: expr •
    4 expr: expr • `+` expr
    5      | expr • `*` expr
    6      | expr • `-` expr
    7      | expr • `/` expr

    `+`  shift, and go to state 18
    `-`  shift, and go to state 19
    `*`  shift, and go to state 20
    `/`  shift, and go to state 21

    $default  reduce using rule 2 (oneLine)


State 13

    3 expr: atom •

    $default  reduce using rule 3 (expr)


State 14

    9 atom: prim •

    $default  reduce using rule 9 (atom)


State 15

   19 S_2_L: S_2_L • NL oneLine
   21 S_2: S_2_L •

    NL  shift, and go to state 22

    $default  reduce using rule 21 (S_2)


State 16

    1 loop: S_1 S_2 •

    $default  reduce using rule 1 (loop)


State 17

    4 expr: expr • `+` expr
    5      | expr • `*` expr
    6      | expr • `-` expr
    7      | expr • `/` expr
    8      | `(` expr • `)`

    `)`  shift, and go to state 23
    `+`  shift, and go to state 18
    `-`  shift, and go to state 19
    `*`  shift, and go to state 20
    `/`  shift, and go to state 21


State 18

    4 expr: expr `+` • expr

    `(`  shift, and go to state 5
    HEX  shift, and go to state 6
    DEC  shift, and go to state 7
    REAL  shift, and go to state 8
    ID  shift, and go to state 9
    STRING  shift, and go to state 10

    expr  go to state 24
    atom  go to state 13
    prim  go to state 14


State 19

    6 expr: expr `-` • expr

    `(`  shift, and go to state 5
    HEX  shift, and go to state 6
    DEC  shift, and go to state 7
    REAL  shift, and go to state 8
    ID  shift, and go to state 9
    STRING  shift, and go to state 10

    expr  go to state 25
    atom  go to state 13
    prim  go to state 14


State 20

    5 expr: expr `*` • expr

    `(`  shift, and go to state 5
    HEX  shift, and go to state 6
    DEC  shift, and go to state 7
    REAL  shift, and go to state 8
    ID  shift, and go to state 9
    STRING  shift, and go to state 10

    expr  go to state 26
    atom  go to state 13
    prim  go to state 14


State 21

    7 expr: expr `/` • expr

    `(`  shift, and go to state 5
    HEX  shift, and go to state 6
    DEC  shift, and go to state 7
    REAL  shift, and go to state 8
    ID  shift, and go to state 9
    STRING  shift, and go to state 10

    expr  go to state 27
    atom  go to state 13
    prim  go to state 14


State 22

   19 S_2_L: S_2_L NL • oneLine

    `(`  shift, and go to state 5
    HEX  shift, and go to state 6
    DEC  shift, and go to state 7
    REAL  shift, and go to state 8
    ID  shift, and go to state 9
    STRING  shift, and go to state 10

    oneLine  go to state 28
    expr  go to state 12
    atom  go to state 13
    prim  go to state 14


State 23

    8 expr: `(` expr `)` •

    $default  reduce using rule 8 (expr)


State 24

    4 expr: expr • `+` expr
    4      | expr `+` expr •
    5      | expr • `*` expr
    6      | expr • `-` expr
    7      | expr • `/` expr

    `*`  shift, and go to state 20
    `/`  shift, and go to state 21

    $default  reduce using rule 4 (expr)


State 25

    4 expr: expr • `+` expr
    5      | expr • `*` expr
    6      | expr • `-` expr
    6      | expr `-` expr •
    7      | expr • `/` expr

    `*`  shift, and go to state 20
    `/`  shift, and go to state 21

    $default  reduce using rule 6 (expr)


State 26

    4 expr: expr • `+` expr
    5      | expr • `*` expr
    5      | expr `*` expr •
    6      | expr • `-` expr
    7      | expr • `/` expr

    $default  reduce using rule 5 (expr)


State 27

    4 expr: expr • `+` expr
    5      | expr • `*` expr
    6      | expr • `-` expr
    7      | expr • `/` expr
    7      | expr `/` expr •

    $default  reduce using rule 7 (expr)


State 28

   19 S_2_L: S_2_L NL oneLine •

    $default  reduce using rule 19 (S_2_L)
